Fix the grid on smaller screens

--- a/assets/_projects.scss
+++ b/assets/_projects.scss
@@ -1,6 +1,17 @@
 .project-tile {
   @include span-columns(4 of 12);
-  @include omega(3);
+  @include omega(3n);
+
+  @include for-phone-only {
+    @include fill-parent;
+    @include omega (1n);
+  }
+
+  @include for-tablet-portrait-up {
+    @include span-columns(4);
+    @include omega (2n);
+  }
+
   border-top: 8px solid $turquoise;
   margin-bottom: 1em;
   min-height: 22em;
@@ -13,6 +24,7 @@
 .project-tile-heading {
   margin-top: 0.1em;
   margin-bottom: 0;
+  line-height: 1.3;
 }
 
 .project-tile-description {
